python-app/k8s/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-app
spec:
  hosts:
    - "example.local"
  gateways:
    - python-app-gateway
  http:
    - name: "kiali"
      match:
        - uri:
            prefix: "/kiali"
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
      timeout: 5s
      retries:
        attempts: 3
        perTryTimeout: 2s
    - name: "grafana"
      match:
        - uri:
            prefix: "/grafana"
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
      timeout: 5s
      retries:
        attempts: 3
        perTryTimeout: 2s
    - name: "python-app"
      match:
        - uri:
            prefix: "/app"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: istio-python-app
            subset: v1
            port:
              number: 80
          weight: 70
        - destination:
            host: istio-python-app
            subset: v2
            port:
              number: 80
          weight: 20
        - destination:
            host: istio-python-app
            subset: v3
            port:
              number: 80
          weight: 10
      timeout: 5s
      retries:
        attempts: 3
        perTryTimeout: 2s
